fix content overflow

--- a/media/vscode.css
+++ b/media/vscode.css
@@ -233,6 +233,8 @@ h2 {
   margin: 10px 0;
   color: var(--dark-text);
   max-width: 100%;
+  word-wrap: break-word;
+  overflow-x: hidden;
 }
 
 .HeaderSeparator:after {
